--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,14 @@ input[type="range"] {
   font-weight: bold;
 }
 
-
-
 input[type="range"] {
   accent-color: black;
+}
+
+.feature{
+  /* background-image: url("../images/detection.webp"); */
+  /* background-color:#cccccc; */
+  /* background-position: center; */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
 }
