Add dark mode switch

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,10 +70,10 @@ input[type="range"] {
   accent-color: black;
 }
 
-.feature{
-  /* background-image: url("../images/detection.webp"); */
-  /* background-color:#cccccc; */
-  /* background-position: center; */
-  /* background-size: cover; */
-  /* background-repeat: no-repeat; */
-}
+/* .feature{
+  background-image: url("../images/detection.webp");
+  background-color:#cccccc;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+} */
